re PR tree-optimization/33299 (miscompilation with gfortran -O2 -ffast-math -ftree-vectorize)

PR tree-optimization/33299
        * tree-vect-transform.c (vect_create_epilog_for_reduction): Update uses
        for all relevant loop-exit phis, not just the first.

From-SVN: r128242